--- a/sesi2.Rmd
+++ b/sesi2.Rmd
@@ -6,7 +6,7 @@ institute: ""
 date: "`r Sys.Date()`"
 output:
   xaringan::moon_reader:
-    css: ["glasgow_template", "uwm-fonts", "extra_css.css"]
+    css: ["ki_nolog.css", "ki-fonts", "extra_css.css"]
     lib_dir: libs
     nature:
       highlightStyle: github
@@ -14,12 +14,17 @@ output:
       countIncrementalSlides: false
       ratio: "16:9"
 ---
-
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
-knitr::opts_chunk$set(warning = FALSE, message = FALSE)
-# options(knitr.table.format = "html")
-library(fontawesome) # from github: https://github.com/rstudio/fontawesome
+knitr::opts_chunk$set(
+  fig.width=9, fig.height=3.5, fig.retina=3,
+  out.width = "100%",
+  cache = FALSE,
+  echo = TRUE,
+  message = FALSE, 
+  warning = FALSE,
+  hiline = TRUE
+)
 ```
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
@@ -30,11 +35,21 @@ style_duo_accent(
   inverse_header_color = "#FFFFFF"
 )
 ```
-layout: true
-  
-<div class="my-footer"><span>bangtedy.github.io</span></div>
 
-<!-- this adds the link footer to all slides, depends on my-footer class in css-->
+```{r load_packages, message=FALSE, warning=FALSE, include=FALSE} 
+library(fontawesome)
+```
+
+```{r xaringan-tile-view, echo=FALSE}
+xaringanExtra::use_tile_view()
+```
+
+```{r xaringan-scribble, echo=FALSE}
+xaringanExtra::use_scribble()
+```
+layout: true
+
+<div class="my-footer"><span>bangtedy.github.io</span></div>
 
 ---
 
