--- a/sesi1.Rmd
+++ b/sesi1.Rmd
@@ -6,7 +6,7 @@ institute: ""
 date: "`r Sys.Date()`"
 output:
   xaringan::moon_reader:
-    css: ["ki_nolog.css", "ki-fonts", "extra_css.css"]
+    css: ["useR_nolog.css", "uwm-fonts", "extra_css.css"]
     lib_dir: libs
     nature:
       slideNumberFormat: "%current%"
@@ -198,9 +198,8 @@ knitr::include_graphics("img/tabel_elemen_bauran.png")
 
 class: inverse, right, middle
 
-<img class= "circle" src="https://github.com/bangtedy.png" width="150px"/>
 
-# Find me at...
+# Thank you, find me at...
 
 [`r fa(name = "twitter")` @t_hlb](http://twitter.com/t_hlb)  
 [`r fa(name = "blog")` bangtedy.github.io](https://bangtedy.github.io)
