--- a/sesi2.Rmd
+++ b/sesi2.Rmd
@@ -6,7 +6,7 @@ institute: ""
 date: "`r Sys.Date()`"
 output:
   xaringan::moon_reader:
-    css: ["ki_nolog.css", "ki-fonts", "extra_css.css"]
+    css: ["useR_nolog.css", "uwm-fonts", "extra_css.css"]
     lib_dir: libs
     nature:
       highlightStyle: github
@@ -198,7 +198,6 @@ perumusannya?
 
 class: inverse, right, middle
 
-<img class= "circle" src="https://github.com/bangtedy.png" width="150px"/>
 
 # Find me at...
 
