--- a/sesi5.Rmd
+++ b/sesi5.Rmd
@@ -46,9 +46,9 @@ class: middle, title-slide
 <div class="lab-logo"></div>
 <!-- <div class="uni-logo"></div> -->
 
-# Menganalisis Perilaku Konsumen
+# Pengelolaan Produk dan Pengembangan Produk Baru
 <hr width="100%" align="left" size="0.3" color="yellow"></hr>
-## <span style="color:gold">Manajemen Pemasaran Sesi 4</span>
+## <span style="color:gold">Manajemen Pemasaran Sesi 5</span>
 ### Tedy Herlambang .small[<br>]
 
 <br><br><br><br><br>
@@ -59,91 +59,95 @@ class: middle, title-slide
 
 # Pendahuluan
 
-Modul 4 mencakup pokok-pokok materi:
-(1) deskripsi dan model perilaku konsumen, dan (2) perilaku pembeli
-industrial. Materi yang dibahas cukup luas, maka Anda disarankan untuk
-memperdalam kajian semua aspek yang dibahas dengan cara mempelajari
-literatur lain yang berkaitan.
+Setelah mempelajari modul ini, diharapkan Anda mampu menjelaskan tentang pengelolaan produk dan pengembangan produk baru. Lebih khusus lagi, setelah mempelajari modul ini diharapkan Anda dapat:
 
-Setelah mempelajari modul ini, diharapkan Anda mampu menganalisis
-perilaku konsumen serta perilaku pembeli industrial. Lebih khusus lagi,
-setelah mempelajari modul ini diharapkan Anda dapat:
+1  pengertian produk;
+2. konsep barang dan jasa;
+3. penggolongan produk melalui berbagai pendekatan;
+4. penggolongan produk industrial;
+5. pertimbangan pemasaran pada produk konsumen;
+6. strategi pemasaran pada produk konsumen dan industrial;
+7. tahapan pengembangan produk mulai dari pencarian ide sampai dengan komersialisasi.
 
-1. menjelaskan deskripsi perilaku konsumen;
-2. menjelaskan model perilaku konsumen;
-3. menganalisis faktor-faktor yang mempengaruhi proses keputusan beli konsumen;
-4. menjelaskan berbagai macam situasi pembelian pada pasar konsumen;
-5. menjelaskan struktur keputusan beli konsumen;
-6. menganalisis proses pengambilan keputusan konsumen;
-7. menjelaskan perilaku pembeli industrial;
-8. menjelaskan proses keputusan pembelian industrial;
-9. menjelaskan situasi pembelian industrial;
-10. menjelaskan berbagai pendekatan pembelian industrial.
 
 ---
-# Perilaku konsumen
+# ARTI PRODUK BAGI KONSUMEN
 
-Proses mental dan emosional serta aktivitas fisik yang dilakukan oleh individu-individu ketika mereka memilih, membeli, menggunakan, dan mengatur barang dan jasa untuk memuaskan kebutuhan dan keinginan tertentu (Bearden dkk, 1995, p. 106)
-
----
-![:scale 70%](img/4.1.model-perilaku-konsumen.png)
----
-# Pertanyaan-pertanyaan berikut sangat penting untuk memahami perilaku konsumen:
-
-- Apa yang mereka beli?
-- Dimana mereka beli?
-- Bagaimana mereka membeli?
-- Seberapa banyak mereka membeli?
-- Kapan mereka membeli?
-- Mengapa mereka membeli?
+- Nasi goreng
+- Bank BRI
+- Skin care
+- Twitter
 
 ---
-# Faktor-factor yang mempengaruhi keputusan membeli (1): 
-
-Stimulus atau kekuatan - kekuatan lingkungan:
-
-- budaya, 
-- sub-budaya, 
-- kelas sosial, 
-- kelompok referensi, 
-- keluarga, 
-- faktor-faktor situasional, 
-- nilai-nilai, norma, dan peranan sosial, dan 
-- variabel-variabel bauran pemasaran; 
+# Produk
+- Produk diartikan sebagai segala sesuatu yang dapat ditawarkan ke sebuah pasar untuk memuaskan keinginan dan kebutuhan (Kotler dan Keller, 2006, p . 344) .
+- Produk juga dapat didefinisikan sebagai tawaran pemuasan kebutuhan dari sebuah perusahaan (Perreault and McCarthy, 2005,p. 242).
+- Produk adalah suatu barang yang mempunyai sifat kentara, suatu jasa, sebuah ide, atau kombinasinya, yang dapat memenuhi kebutuhan konsumen maupun pelanggan bisnis melalui suatu pertukaran; juga diartikan sebagai sejumlah atribut yang mencakup fitur, fungsi, manfaat, dan penggunaan (Solomon and Stuart, 1997, p. 294).
+-- > kombinasi dari barang, jasa, dan ide.
 
 ---
 
-![:scale 70%](img/4.3.faktor-budaya.png)
----
-![:scale 70%](img/tabel41.daur-hidup-keluarga.png)
----
-![:scale 70%](img/tabel41.daur-hidup-keluarga-2.png)
+# BARANG DAN JASA
 
----
-![:scale 70%](img/tabel41.daur-hidup-keluarga-3.png)
+- Barang dapat diartikan sebagai suatu produk yang kentara, artinya, dapat dilihat, disentuh, dicium, dan/atau dirasakan.
+- Jasa diartikan sebagai suatu produk yang tidak kentara, seperti pengangkutan dengan kereta, penginapan di hotel, pinjaman bank, atau rias rambut, yang dipertukarkan secara langsung dari produsen ke konsumen.
 
----
-# Faktor-factor yang mempengaruhi keputusan membeli (2): 
 
-- persepsi, 
-- motif, 
-- pengolahan informasi, 
-- pembelajaran, 
-- sikap dan keyakinan, 
-- kepribadian. 
-- pengalaman, dan 
-- konsep diri.
-
----
-![:scale 70%](img/gambar42.proses-keputusan-beli.png)
 
 ---
 
-![:scale 60%](img/gambar44.proses-pengambilan-keputusan.png)
+![:scale 70%](img/gambar51.png)
 ---
-class: center
+![:scale 70%](img/gambar52.png)
+---
+# Penggolongan Produk Menurut Tujuan Pemakaiannya
 
-![:scale 70%](img/tabel43-tahap-tahap-pembelian-industrial.png)
+- Produk konsumen
+  - Produk konvenien ( convenience products)
+  - Produk shopping ( shopping products)
+  - Produk spesial ( specialty products).
+- Produk industrial
+  - Bahan baku
+  - Komponen dan produk setengah jadi
+  - Perlengkapan operasi ( operating supplies)
+  - Instalasi
+  - Peralatan ekstra
+
+
+---
+
+![:scale 60%](img/tabel51.png)
+
+---
+![:scale 60%](img/tabel52.png)
+
+---
+![:scale 70%](img/tabel53.png)
+
+---
+![:scale 60%](img/tabel54.png)
+
+---
+.pull-left[
+![](img/tabel55a.png)
+]
+
+.pull-right[
+
+![](img/tabel55b.png)
+
+]
+---
+.pull-left[
+
+![](img/tabel56.png)
+
+]
+
+.pull-right[
+![](img/tabel56b.png)
+
+]
 ---
 
 class: inverse, right, bottom
